<resources>

    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="mins">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="ampm">
        <item>AM</item>
        <item>PM</item>
    </string-array>


    <string name="app_name">SnapAlarm</string>
    <string name="action_settings">Settings</string>

    <string name="camera">Camera</string>
    <string name="createA">Create Alarm</string>

    <string name="name">Enter Alarm Name...</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="item00">1. Wall</string>
    <string name="item01">2. Shoe</string>
    <string name="item02">3. Toaster</string>
    <string name="item03">4. TV</string>
    <string name="item04">5. Plant</string>
    <string name="item05">6. Table</string>
    <string name="item06">7. Stove</string>
    <string name="item07">8. Couch</string>
    <string name="item08">9. Mailbox</string>
    <string name="item09">10. Fork</string>
    <string name="create">Create</string>
    <string name="warn">Note: These items are ranked from easiest to hardest for the image recognition to pick up in the AVD Camera Environment!</string>

    <string name="colon">:</string>
    <string name="title_activity_alarm_trigger">AlarmTrigger</string>

    <string name="ret">Return</string>
    <string name="imageRes">Image Results</string>
</resources>
