<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"
    tools:context=".AlarmPage">

    <CheckBox
        android:id="@+id/item05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:text="@string/item05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEdit" />

    <CheckBox
        android:id="@+id/item06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:text="@string/item06"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item05" />

    <CheckBox
        android:id="@+id/item07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:text="@string/item07"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item06" />

    <CheckBox
        android:id="@+id/item08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:text="@string/"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item07" />

    <CheckBox
        android:id="@+id/item09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:text="@string/item09"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item08" />


    <Spinner
        android:id="@+id/hourSpin"
        android:layout_width="87dp"
        android:layout_height="85dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="36dp"
        android:dropDownWidth="80dp"
        android:textColor="@color/light_grey"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/minSpin"
        android:layout_width="87dp"
        android:layout_height="85dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:textColor="@color/light_grey"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/hourSpin"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/ampmSpin"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="56dp"
        android:textColor="@color/light_grey"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/minSpin"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colon"
        android:layout_width="36dp"
        android:layout_height="62dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="48dp"
        android:text="@string/colon"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ToggleButton
        android:id="@+id/satButt"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/color_toggle"
        android:text="@string/sat"
        android:textOff="@string/sat"
        android:textOn="@string/sat"
        app:layout_constraintStart_toEndOf="@+id/friButt"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/friButt"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/color_toggle"
        android:text="@string/fri"
        android:textOff="@string/fri"
        android:textOn="@string/fri"
        app:layout_constraintStart_toEndOf="@+id/thuButt"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/thuButt"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/color_toggle"
        android:text="@string/thu"
        android:textOff="@string/thu"
        android:textOn="@string/thu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/wedButt"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/color_toggle"
        android:text="@string/wed"
        android:textOff="@string/wed"
        android:textOn="@string/wed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tueButt"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/tueButt"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/color_toggle"
        android:text="@string/tue"
        android:textOff="@string/tue"
        android:textOn="@string/tue"
        app:layout_constraintStart_toEndOf="@+id/monButt"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/monButt"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/color_toggle"
        android:text="@string/mon"
        android:textOff="@string/mon"
        android:textOn="@string/mon"
        app:layout_constraintStart_toEndOf="@+id/sunButt"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/sunButt"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/color_toggle"
        android:text="@string/sun"
        android:textOff="@string/sun"
        android:textOn="@string/sun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="297dp"
        android:layout_height="47dp"
        android:layout_marginTop="288dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/light_grey"
        android:textColorHint="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<<<<<<< HEAD
    <CheckBox
        android:id="@+id/item01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/item01"
=======
    <TextView
        android:id="@+id/colon"
        android:layout_width="36dp"
        android:layout_height="62dp"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="71dp"
        android:text="@string/colon"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="37sp"
        android:textStyle="bold"
>>>>>>> db4954e3b5f43f4a56e66d58ac2c0d49144efd6a
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item00" />

    <CheckBox
        android:id="@+id/item03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/item03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item02" />

    <CheckBox
        android:id="@+id/item00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/item00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEdit" />

    <CheckBox
        android:id="@+id/item02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/item02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item01" />

    <CheckBox
        android:id="@+id/item04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/item04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item03" />


</android.support.constraint.ConstraintLayout>